{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 19,
  "lineage": "f16a430b-be2e-51f0-a134-f564bbd38b8f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "demo-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkInterfaces/demo-instance1-nic",
            "internal_domain_name_suffix": "hoz2w0pj54lutkcpo5oy4eb24h.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "instance1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/publicIPAddresses/demo-instance1-pip",
                "subnet_id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-internal-1"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-92-E3-40",
            "name": "demo-instance1-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "network-security-group-demo",
            "virtual_machine_id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Compute/virtualMachines/demo-vm"
          },
          "dependencies": [
            "azurerm_public_ip.demo-instance-1",
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo-internal-1",
            "azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "demo-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkInterfaces/demo-instance2-nic",
            "internal_domain_name_suffix": "hoz2w0pj54lutkcpo5oy4eb24h.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "instance2",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-internal-1"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-89-2F-5B",
            "name": "demo-instance2-nic",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "network-security-group-demo",
            "virtual_machine_id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Compute/virtualMachines/demo-instance2"
          },
          "dependencies": [
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo-internal-1",
            "azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_application_security_group_association",
      "name": "demo-instance-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "application_security_group_id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/applicationSecurityGroups/internet-facing",
            "id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkInterfaces/demo-instance1-nic|/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/applicationSecurityGroups/internet-facing",
            "network_interface_id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkInterfaces/demo-instance1-nic"
          },
          "dependencies": [
            "azurerm_application_security_group.demo-instance-group",
            "azurerm_network_interface.demo-instance-1",
            "azurerm_public_ip.demo-instance-1",
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo-internal-1",
            "azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "demo-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkInterfaces/demo-instance1-nic|/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkSecurityGroups/demo-allow-ssh",
            "network_interface_id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkInterfaces/demo-instance1-nic",
            "network_security_group_id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkSecurityGroups/demo-allow-ssh"
          },
          "dependencies": [
            "azurerm_network_interface.demo-instance-1",
            "azurerm_network_security_group.allow-ssh",
            "azurerm_public_ip.demo-instance-1",
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo-internal-1",
            "azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "demo-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkInterfaces/demo-instance2-nic|/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkSecurityGroups/demo-internal-facing",
            "network_interface_id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkInterfaces/demo-instance2-nic",
            "network_security_group_id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkSecurityGroups/demo-internal-facing"
          },
          "dependencies": [
            "azurerm_application_security_group.demo-instance-group",
            "azurerm_network_interface.demo-instance-2",
            "azurerm_network_security_group.internal-facing",
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkSecurityGroups/demo-allow-ssh",
            "location": "westeurope",
            "name": "demo-allow-ssh",
            "resource_group_name": "network-security-group-demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow SSH from a single PIP",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "79.148.156.201/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "internal-facing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/networkSecurityGroups/demo-internal-facing",
            "location": "westeurope",
            "name": "demo-internal-facing",
            "resource_group_name": "network-security-group-demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow port 80 from Application Group",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test-rule-allow",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [
                  "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/applicationSecurityGroups/internet-facing"
                ],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "Deny all traffic",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test-rule-deny",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_application_security_group.demo-instance-group",
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "demo-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/publicIPAddresses/demo-instance1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.40.204.136",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "demo-instance1-pip",
            "resource_group_name": "network-security-group-demo",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "demo-internal-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-internal-1",
            "name": "demo-internal-1",
            "resource_group_name": "network-security-group-demo",
            "virtual_network_name": "demo-network"
          },
          "dependencies": [
            "azurerm_resource_group.demo",
            "azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "69cbb33b-ffe9-4997-a84f-77dd8f103cf7",
            "id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/virtualNetworks/demo-network",
            "location": "westeurope",
            "name": "demo-network",
            "resource_group_name": "network-security-group-demo",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/80beae50-8fde-4c7e-9fe0-d328d4b6b84d/resourceGroups/network-security-group-demo/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-internal-1",
                "name": "demo-internal-1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    }
  ]
}